# SchoolSystem

./: %LOG_FILE%  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_WINDOWS.md  HOTFIX.md  LICENSE  PROJECT_MANAGEMENT.md  README.md  ROADMAP.md  TODO.md  agent.py  bot.py  main.py  pyproject.toml  recording.py  requirements-dev.txt  requirements.txt  run.bat  start.sh  start.vbs  stop.bat  study_plan.py  timetable.py  ui.py  update_version.py  version.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: lint.yml  release.yml  test.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  TYPE_HINTS_GUIDE.md  WOL_INTEGRATION.md
termux-boot/: start-schoolsystem.sh
tests/: __init__.py  conftest.py  test_main.py
