[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schoolsystem"
version = "2.0.0-alpha.2"
description = "Personal study management system for Hong Kong DSE students"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SchoolSystem Yiu", email = ""}
]
keywords = ["study", "dse", "homework", "timetable", "discord"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.1.0",
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.urls]
Repository = "https://github.com/SchoolSystemYiu/SchoolSystem"
Issues = "https://github.com/SchoolSystemYiu/SchoolSystem/issues"
Changelog = "https://github.com/SchoolSystemYiu/SchoolSystem/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".pytest_cache",
]
ignore = ["E501", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
